Updated to Java/JavaFX 11.